# DuckCoding

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  mirror-api-example.json  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_client.rs  lib.rs  main.rs
src-tauri/src/commands/: amp_commands.rs  analytics_commands.rs  balance_commands.rs  config_commands.rs  error.rs  mod.rs  onboarding.rs  pricing_commands.rs  profile_commands.rs  provider_commands.rs  proxy_commands.rs  session_commands.rs  startup_commands.rs  token_commands.rs  token_stats_commands.rs  tool_commands.rs  tool_management.rs  update_commands.rs  window_commands.rs
src-tauri/src/commands/tool_commands/: detection.rs  installation.rs  management.rs  scanner.rs  update.rs  validation.rs
src-tauri/src/core/: error.rs  error_test.rs  http.rs  logger.rs  mod.rs
src-tauri/src/data/: changelogs.rs  mod.rs  snapshots.rs
src-tauri/src/models/: config.rs  mod.rs  pricing.rs  provider.rs  proxy_config.rs  remote_token.rs  token_stats.rs  tool.rs  update.rs
src-tauri/src/services/: amp_native_config.rs  config.rs  config_legacy.rs  config_watcher.rs  downloader.rs  installer.rs  mod.rs  provider_manager.rs  proxy.rs  transparent_proxy.rs  update.rs  version.rs
src-tauri/src/services/config/: mod.rs  types.rs  utils.rs  watcher.rs
src-tauri/src/services/migration_manager/: manager.rs
src-tauri/src/services/new_api/: client.rs  mod.rs
src-tauri/src/services/pricing/: builtin.rs  manager.rs  mod.rs
src-tauri/src/services/profile_manager/: manager.rs  mod.rs  native_config.rs  types.rs
src-tauri/src/services/proxy/: mod.rs  proxy_instance.rs  proxy_manager.rs  proxy_service.rs  transparent_proxy.rs  transparent_proxy_config.rs
src-tauri/src/services/session/: db_utils.rs  manager.rs  mod.rs  models.rs
src-tauri/src/setup/: initialization.rs  menu.rs
src-tauri/src/utils/: auto_startup.rs  command.rs  installer_scanner.rs  mod.rs  platform.rs  wsl_executor.rs
(+202 files in other folders)
