[package]
name = "duckcoding"
version = "1.1.0"
description = "DuckCoding AI 工具一键配置"
authors = ["DuckCoding"]
edition = "2021"
default-run = "duckcoding"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
toml_edit = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
regex = "1"
anyhow = "1"

# CLI dependencies
clap = { version = "4", features = ["derive", "cargo"], optional = true }
inquire = { version = "0.7", optional = true }
console = { version = "0.15", optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cli = ["clap", "inquire", "console", "colored", "indicatif"]

# 定义 CLI 二进制
[[bin]]
name = "duckcoding-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]
